test/TestPhases/parser/invalid/UnitFrac2.blc
module


unit s
unit Hz  = 2 / s
